--- a/style.css
+++ b/style.css
@@ -85,11 +85,12 @@ nav img{
     text-decoration: none;
     color:rgb(255, 255, 255);
     border: 1px solid #ffffff;
-    padding: 12px 34px;
+    padding: 12px 30px;
     font-size: 13px;
     background: transparent;
     position: relative;
     cursor: pointer;
+    margin: 10px;
 } 
 
 .art-button:hover{
@@ -97,8 +98,6 @@ nav img{
     background:rgba(17, 108, 212, 0.7);
     transition: 1s;
 }
-
-
 
 
 
@@ -118,3 +117,33 @@ img.green:hover{
 
  */
 
+
+.box{
+     /* margin-inline: 300px; */
+     width: 1000px;
+     padding: 60px;
+     border: 10px, rgb(255, 255, 255);
+     color: rgb(255, 255, 255);
+     margin-top: -300px;
+     background-color:rgba(0, 0, 0, 0.8);
+     display: grid;
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+     
+
+
+ }
+
+.grad {
+    height: 300px;
+    background-size: cover;
+    background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(0, 0, 0));
+    
+}
+
+@media only screen and (max-width: 1000px) {
+    .box {
+      width: 30%;
+    }
+  }
