--- a/style_main.css
+++ b/style_main.css
@@ -7,7 +7,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(17, 108, 212, 0.7)),url(images/hgfdhfghdgfh.jpg)
+    background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(99, 112, 185, 0.7)),url(images/hgfdhfghdgfh.jpg)
     ;
     background-position: center;
     background-size: cover;
@@ -20,13 +20,18 @@ nav{
     padding: 0.3% 6%;
     justify-content: space;
     align-items: center;
-    background-color: #000000
+    height: 70px;
+    background-color: #ffffff;
 
 }
-nav img{
-    width: 50px;
-    
+
+.button{
+    float: right;
+    margin-right: 30px;
+    margin-top: -50px;
 }
+
+/* https://codepen.io/PaulinaSurazynska/pen/bGVpBOb */
 
 .nav-links{
     flex: 1;
@@ -42,16 +47,16 @@ nav img{
 }
 
 .nav-links ul li a{
-    color:rgb(255, 255, 255);
+    color:rgb(0, 0, 0);
     text-decoration: none;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .nav-links ul li::after{
     content: '';
     width: 10%;
     height: 2px;
-    background:rgb(255, 255, 255);
+    background:rgb(0, 0, 0);
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -83,8 +88,8 @@ nav img{
 .art-button{
     display: inline-block;
     text-decoration: none;
-    color:rgb(255, 255, 255);
-    border: 1px solid #ffffff;
+    color:rgb(0, 0, 0);
+    border: 1px solid #000000;
     padding: 12px 30px;
     font-size: 13px;
     background: transparent;
@@ -94,7 +99,7 @@ nav img{
 } 
 
 .art-button:hover{
-    border: 1px solid #ffffff;
+    border: 1px solid #000000;
     background:rgba(17, 108, 212, 0.7);
     transition: 1s;
 }
@@ -120,16 +125,17 @@ img.green:hover{
 
 .box{
      /* margin-inline: 300px; */
-     width: 1300px;
+     width: 80%;
      padding: 60px;
-     border: 10px, rgb(255, 255, 255);
-     color: rgb(255, 255, 255);
+     border: 10px, rgb(0, 0, 0);
+     color: rgb(0, 0, 0);
      margin-top: -300px;
-     background-color:rgba(0, 0, 0, 0.8);
+     background-color:rgba(255, 255, 255, 0.8);
      display: grid;
      display: block;
      margin-left: auto;
      margin-right: auto;
+     margin-top: -350px;
      
 
 
@@ -138,7 +144,7 @@ img.green:hover{
 .grad {
     height: 300px;
     background-size: cover;
-    background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(0, 0, 0));
+    background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(255, 255, 255));
     
 }
 
