--- a/style_main.css
+++ b/style_main.css
@@ -5,6 +5,10 @@
     font-family: sans-serif;
 }
 
+body{
+    overflow-y: auto;
+}
+
 :root{
     --primary-color: rgb(255, 255, 255); 
     --primary-color-header: rgb(226, 226, 226);
@@ -111,18 +115,16 @@
         margin-right: 10%;
     }
     
-    .langWrap{
- 
-    }
 
 
     .nav-menu{
         justify-content: center;
+        
         display: grid;
         grid-template-columns: auto;
-        list-style: none;
-        text-align: center;
-        justify-self: end;
+        /* list-style: none; */
+        /* text-align: center;
+        justify-self: end; */
         background: var(--primary-color-header);
         margin: 0;
         width: 100%;
@@ -130,6 +132,7 @@
         top: 70px;
         opacity: 0;
         transition: all 0.5s ease;
+        /* left: -100%; */
 
     }
 
@@ -142,6 +145,7 @@
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
+        /* position: absolute; */
     }
 
     .nav-links{
@@ -152,10 +156,9 @@
     }
 
     .nav-links:hover {
-
         background-color: var(--secondary-color);
         color: white;
-
+        width: 100%;
         transition: all 0.4s ease-out;
 
     }
@@ -226,11 +229,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 200px;
+    font-size: 100px;
     color: rgb(255, 255, 255, 0.6);
   }
 
-  .inf_line {width: 100%; height: 1px; background-color: var(--text-color); margin: 10px;}
+  .inf_line {width: 100%; height: 1.5px; background-color: var(--text-color); margin: 5px;}
 
 
 
@@ -243,11 +246,12 @@
     max-width: 1000px;
     display: flex;
     align-items: center;
-    color: var(--text-color)
+    color: var(--text-color);
 }
 .textbox_image {
     margin: 40px 40px 0 0;
     width: 250px;
+    max-width: 30%;
     object-fit: contain;
     align-self: flex-start;
 }
@@ -258,6 +262,7 @@
     object-fit: contain;
     align-self: flex-start;
 }
+
 .textbox_text {
     flex: 1 1 auto;
 }
@@ -269,13 +274,14 @@ br {
   }
 
 .footerweb {
-position: fixed;
-left: 0;
-bottom: 0;
-width: 100%;
-background-color: var(--primary-color);
-color: var(--text-color);
-text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 45px;
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    text-align: center;
 }
 
 .langWrap{
@@ -284,6 +290,7 @@ text-align: center;
     display: flex;
     text-indent: 10px;
     color: var(--text-color);
+    justify-content: center;
 }
 
 c{
@@ -292,6 +299,8 @@ c{
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
+    padding-inline: 10px;
+    
   }
   
   c.active{
