--- a/style_main.css
+++ b/style_main.css
@@ -10,6 +10,7 @@
     --primary-color-header: rgb(226, 226, 226);
     --secondary-color: rgb(218, 206, 206);
     --text-color: rgb(0, 0, 0);
+   
 }
 
 
@@ -17,7 +18,8 @@
     --primary-color: rgb(32, 32, 32); 
     --primary-color-header: rgb(32, 32, 32);
     --secondary-color: rgb(156, 145, 145);
-    --text-color: rgb(255, 255, 255);    
+    --text-color: rgb(255, 255, 255);  
+   
 }
 
 .background{
@@ -246,10 +248,12 @@
 
 .abouttextbox p {
     position: absolute;
-    left: 40%;
+    left: 50%;
     top: 30%;
-    transform: translateY(-50%);
+    transform: translateY(-20%);
     width: 50%;
+    padding-right: 30px;
+    
 }
 
 .abouttextbox h2 {
@@ -258,6 +262,7 @@
     top: 10%;
     transform: translateY(-100%);
     max-width: 70%;
+    padding-right: 20px;
 }
 
   /* ================================== TEXTBOXES EDU AND EXP================================== */
@@ -301,6 +306,7 @@
     top: 60%;
     transform: translateY(-50%);
     width: 70%;
+    padding-right: 30px;
 }
 
 .textbox h2 {
@@ -310,6 +316,7 @@
     text-decoration: bold;
     transform: translateY(-50%);
     max-width: 70%;
+    padding-right: 20px;
 }
 
 
@@ -386,15 +393,79 @@ c{
     /* height: 65vh; */
     scrollbar-color: var(--text-color) var(--primary-color);
     scrollbar-width: thin;
-    
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
   }
 
   .overflowcontainer::-webkit-scrollbar {
     display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.overflowcontainer {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+
+.overflowcontainer_home{
+    position: relative;
+    overflow-y: auto;
+    overflow-x:auto;
+    height: 100%;
+    /* height: 65vh; */
+    scrollbar-color: var(--text-color) var(--primary-color);
+    scrollbar-width: thin;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
 }
+
+.overflowcontainer_home_AboutMe{
+    position: absolute;
+    z-index: 1;
+    top: 545px;
+    left: 780px;
+    filter: grayscale();
+}
+
+.overflowcontainer_home_Education{
+    position: absolute;
+    z-index: 1;
+    top: 450px;
+    left: 470px;
+    filter: grayscale();
+}
+
+.overflowcontainer_home_Skills{
+    position: absolute;
+    z-index: 1;
+    top: 495px;
+    left: 190px;
+    filter: grayscale();
+}
+
+.overflowcontainer_home_Projects{
+    position: absolute;
+    z-index: 1;
+    top: 497px;
+    left: 945px;
+    filter: grayscale();
+}
+
+.overflowcontainer_home_Experience{
+    position: absolute;
+    z-index: 1;
+    top: 235px;
+    left: 1396px;
+    filter: grayscale(10);
+}
+
+.shadowfilter {
+    -webkit-filter: drop-shadow(0px 0px 0px rgb(108, 182, 74));
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.5s linear;
+    
+  }
+  .shadowfilter:hover {
+    -webkit-filter: drop-shadow(0px 0px 20px rgb(156, 184, 79));
+    z-index: 2;
+  }
