--- a/projects.css
+++ b/projects.css
@@ -20,7 +20,7 @@ label{
 [type="radio"]:nth-of-type(2):checked ~ .gallery .card:not(.Architecture),
 [type="radio"]:nth-of-type(4):checked ~ .gallery .card:not(.Product),
 [type="radio"]:nth-of-type(3):checked ~ .gallery .card:not(.Code),
-[type="radio"]:nth-of-type(5):checked ~ .gallery .card:not(.Graphic)
+[type="radio"]:nth-of-type(5):checked ~ .gallery .card:not(.Etc)
 {
   display: none;
 }
@@ -58,4 +58,8 @@ label{
   text-align: center;
   color: var(--text-color);
 }
+
+
+
+/* INDIV PAGES */
 
