--- a/style_main.css
+++ b/style_main.css
@@ -34,6 +34,7 @@
     width: 30px;
     cursor: pointer;
     margin-right: 5%;
+    
 }
 
 .nav-container{
@@ -127,6 +128,7 @@
     #icondark{
         margin-right: 12%;
         margin-top: 1.5%;
+
     }
     
 
@@ -401,12 +403,19 @@ c{
     display: none;
 }
 
+.overflowcentered{
+    width: 100vw;
+    margin: auto;
+    position: relative;
+}
+
 
 .overflowcontainer_home{
-    position: relative;
+    /* position: relative; */
     overflow-y: auto;
     overflow-x:auto;
-    height: 100%;
+    height: 90vh;
+    /* width: 100vw; */
     /* height: 65vh; */
     scrollbar-color: var(--text-color) var(--primary-color);
     scrollbar-width: thin;
@@ -415,7 +424,10 @@ c{
 
     position: absolute;
     left: 50%;
-    transform: translate(-50%, 0%);
+    transform: translatex(-50%);
+    width: 95vh;
+    width: 100%;
+    margin: auto;
 }
 
 .overflowcontainer_home_AboutMe{
@@ -459,13 +471,14 @@ c{
 }
 
 .shadowfilter {
-    -webkit-filter: drop-shadow(0px 0px 0px rgb(108, 182, 74));
+    -webkit-filter: drop-shadow(0px 0px 0px rgb(79, 185, 102));
     -webkit-transition: all 0.2s linear;
     -o-transition: all 0.2s linear;
-    transition: all 0.5s linear;
+    transition: all 0.2s linear;
     
   }
+  
   .shadowfilter:hover {
-    -webkit-filter: drop-shadow(0px 0px 20px rgb(156, 184, 79));
+    -webkit-filter: drop-shadow(0px 0px 10px rgb(170, 228, 103));
     z-index: 2;
   }
