--- a/style_main.css
+++ b/style_main.css
@@ -1,50 +1,50 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
 }
 
-:root{
-    --primary-color: rgb(255, 255, 255); 
+:root {
+    --primary-color: rgb(255, 255, 255);
     --primary-color-header: rgb(226, 226, 226);
     --secondary-color: rgb(218, 206, 206);
     --text-color: rgb(0, 0, 0);
-   
+
 }
 
 
-.dark-theme{
-    --primary-color: rgb(32, 32, 32); 
+.dark-theme {
+    --primary-color: rgb(32, 32, 32);
     --primary-color-header: rgb(32, 32, 32);
     --secondary-color: rgb(156, 145, 145);
-    --text-color: rgb(255, 255, 255);  
-   
+    --text-color: rgb(255, 255, 255);
+
 }
 
-.background{
+.background {
     height: 100vh;
     width: 100%;
     background: var(--primary-color);
     font-family: sans-serif;
     position: relative;
-} 
+}
 
-#icondark{
+#icondark {
     width: 30px;
     cursor: pointer;
     margin-right: 5%;
-    
+
 }
 
-.nav-container{
+.nav-container {
     width: 100%;
     /* navbar background color */
     background-color: var(--primary-color)
 }
 
 
-.navbar{
+.navbar {
     /* display: grid; */
     /* grid-template-columns: 0.2fr auto 1fr; */
     height: 60px;
@@ -58,16 +58,15 @@
     font-size: 14px;
 }
 
-#navbar-logo{
+#navbar-logo {
     /* justify-self: start; */
     justify-content: left;
     margin-left: 40px;
     width: 50px;
     box-shadow: inset 0 0 100px rgb(228, 228, 228)
-
 }
 
-#navbar-logo{
+#navbar-logo {
     cursor: pointer;
 }
 
@@ -82,7 +81,7 @@
     margin-right: 2%
 }
 
-.nav-menu li{
+.nav-menu li {
     margin-inline: 20px;
 }
 
@@ -93,7 +92,7 @@
 }
 
 
-.nav-links::after{
+.nav-links::after {
     content: '';
     width: 10%;
     height: 2px;
@@ -121,19 +120,19 @@
 }
 
 @media screen and (max-width: 1100px) {
-    .nav-container{
+    .nav-container {
         position: relative;
     }
 
-    #icondark{
+    #icondark {
         margin-right: 12%;
         margin-top: 1.5%;
 
     }
-    
 
 
-    .nav-menu{
+
+    .nav-menu {
         justify-content: center;
         display: grid;
         grid-template-columns: auto;
@@ -151,7 +150,7 @@
 
     }
 
-    #navbar-logo{
+    #navbar-logo {
         margin-left: 20px;
     }
 
@@ -164,7 +163,7 @@
         z-index: 100;
     }
 
-    .nav-links{
+    .nav-links {
         text-align: center;
         line-height: 60px;
         width: 100%;
@@ -184,12 +183,12 @@
     }
 
 
-    #mobile-menu{
+    #mobile-menu {
         position: absolute;
         top: 20%;
         right: 3%;
         transform: translate(5%, 20%);
-        
+
 
     }
 
@@ -197,24 +196,26 @@
         display: block;
         cursor: pointer;
     }
-    
-    .menu-toggle:hover{
+
+    .menu-toggle:hover {
         cursor: pointer;
     }
 
     #mobile-menu.is-active .bar:nth-child(2) {
         opacity: 0;
     }
+
     #mobile-menu.is-active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);  
+        transform: translateY(8px) rotate(45deg);
     }
+
     #mobile-menu.is-active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
 }
 
-.imagecenter{
-    text-align: center;  
+.imagecenter {
+    text-align: center;
 }
 
 .centered {
@@ -224,16 +225,21 @@
     transform: translate(-50%, -50%);
     font-size: 100px;
     color: rgb(255, 255, 255, 0.6);
-  }
+}
 
-  .inf_line {width: 100%; height: 1px; background-color: var(--text-color); margin: 5px;}
+.inf_line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--text-color);
+    margin: 5px;
+}
 
 /* ================================== ABOUT ME================================== */
 
-.abouttextbox{
+.abouttextbox {
     position: relative;
     left: 50%;
-    transform: translatex( -50%);
+    transform: translatex(-50%);
     max-width: 1000px;
     padding: 20px 40px 40px;
     color: var(--text-color);
@@ -241,7 +247,7 @@
     font-size: 12px;
 }
 
-.abouttextbox img{ 
+.abouttextbox img {
     position: absolute;
     margin: 40px, 0px;
     width: 25%;
@@ -255,7 +261,7 @@
     transform: translateY(-20%);
     width: 50%;
     padding-right: 30px;
-    
+
 }
 
 .abouttextbox h2 {
@@ -267,7 +273,7 @@
     padding-right: 20px;
 }
 
-  /* ================================== TEXTBOXES EDU AND EXP================================== */
+/* ================================== TEXTBOXES EDU AND EXP================================== */
 
 .text {
     color: var(--text-color);
@@ -275,7 +281,7 @@
     font-size: 12px;
 }
 
-.text h1{
+.text h1 {
     color: var(--text-color);
     text-align: center;
     text-transform: uppercase;
@@ -284,10 +290,10 @@
 }
 
 
-.textbox{
+.textbox {
     position: relative;
     left: 50%;
-    transform: translatex( -50%);
+    transform: translatex(-50%);
     max-width: 1100px;
     padding: 20px 40px 40px;
     color: var(--text-color);
@@ -295,7 +301,7 @@
     font-size: 12px;
 }
 
-.textbox img{ 
+.textbox img {
     position: absolute;
     margin: 40px, 10px;
     width: 15%;
@@ -325,7 +331,7 @@
 br {
     display: block;
     line-height: 12px;
-  }
+}
 
 /* ================================== FOOTER ========================================= */
 
@@ -340,54 +346,64 @@ br {
     text-align: center;
 }
 
-.social-links{
+.social-links {
     margin-top: 10px;
     bottom: 0;
     text-align: center;
 
 }
 
-.social-links a{
+.social-links a {
     font-size: 16px;
     color: var(--text-color);
     margin-right: 20px;
     text-decoration: none;
 }
 
-.social-links a:hover{
+.social-links a:hover {
     color: var(--secondary-color);
 }
 
-.fa-solid{
+.fa-solid {
     padding-left: 100px;
     color: var(--text-color);
 }
 
 /* ================================== LANGUAGE CHANGE ========================================= */
-.langWrap{
+.langWrap {
     cursor: pointer;
-    margin-right: 3%; 
+    margin-right: 3%;
     display: flex;
     text-indent: 10px;
     color: var(--text-color);
     justify-content: center;
 }
 
-c{
+c {
     text-transform: uppercase;
     color: var(--text-color);
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
     padding-inline: 10px;
-    
-  }
-  
-  c.active{
-    color: var(--secondary-color);
-  }
 
-  .overflowcontainer{
+}
+
+c.active {
+    color: var(--secondary-color);
+}
+
+.overflowwrapper {
+    background: var(primary-color);
+    position:relative;
+}
+
+.overflowwrapper::after {
+    clear: both;
+}
+
+
+.overflowcontainer_nonhome{
     position: relative;
     overflow-y: auto;
     overflow-x:hidden;
@@ -399,38 +415,60 @@ c{
     scrollbar-width: none;  /* Firefox */
   }
 
-  .overflowcontainer::-webkit-scrollbar {
+
+.overflowcontainer {
+    position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 100%;
+    /* height: 65vh; */
+    scrollbar-color: var(--text-color) var(--primary-color);
+    scrollbar-width: thin;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.overflowcontainer::-webkit-scrollbar {
     display: none;
 }
 
-.overflowcentered{
-    width: 100vw;
+.overflowcentered {
+    width: fit-content;
     margin: auto;
     position: relative;
 }
 
 
-.overflowcontainer_home{
-    /* position: relative; */
-    overflow-y: auto;
-    overflow-x:auto;
-    height: 90vh;
+.overflowcontainer_home {
+    position: relative;
+    overflow-y: hidden;
+    overflow-x: auto;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    /*height: 90vh;*/
     /* width: 100vw; */
     /* height: 65vh; */
     scrollbar-color: var(--text-color) var(--primary-color);
     scrollbar-width: thin;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 
-    position: absolute;
+    /* position: absolute;
     left: 50%;
     transform: translatex(-50%);
-    width: 95vh;
-    width: 100%;
+    width: 95vh; */
+   /*width: 100%;*/
     margin: auto;
+    
 }
 
-.overflowcontainer_home_AboutMe{
+.overflowcontainer_home_AboutMe {
     position: absolute;
     z-index: 1;
     top: 545px;
@@ -438,7 +476,7 @@ c{
     filter: grayscale();
 }
 
-.overflowcontainer_home_Education{
+.overflowcontainer_home_Education {
     position: absolute;
     z-index: 1;
     top: 450px;
@@ -446,15 +484,15 @@ c{
     filter: grayscale();
 }
 
-.overflowcontainer_home_Skills{
+.overflowcontainer_home_Skills {
     position: absolute;
     z-index: 1;
-    top: 495px;
+    top: 497px;
     left: 190px;
     filter: grayscale();
 }
 
-.overflowcontainer_home_Projects{
+.overflowcontainer_home_Projects {
     position: absolute;
     z-index: 1;
     top: 497px;
@@ -462,7 +500,7 @@ c{
     filter: grayscale();
 }
 
-.overflowcontainer_home_Experience{
+.overflowcontainer_home_Experience {
     position: absolute;
     z-index: 1;
     top: 235px;
@@ -471,14 +509,61 @@ c{
 }
 
 .shadowfilter {
-    -webkit-filter: drop-shadow(0px 0px 0px rgb(79, 185, 102));
+    filter: drop-shadow(0px 0px 0px rgb(79, 185, 102));
     -webkit-transition: all 0.2s linear;
     -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
-    
-  }
-  
-  .shadowfilter:hover {
-    -webkit-filter: drop-shadow(0px 0px 10px rgb(170, 228, 103));
+
+}
+
+.shadowfilter:hover {
+    filter: drop-shadow(0px 0px 10px rgb(170, 228, 103));
     z-index: 2;
-  }
+}
+/*
+@media screen and (max-width:1680px) {
+    .overflowcentered {
+     transform: scale(.7);
+     top:-120px
+     
+    }
+}
+
+@media screen and (max-width:1024px) {
+    .overflowcentered {
+     transform: scale(.5);
+    }
+}
+*/
+.dark-theme .shadowfilter:hover{
+    filter: drop-shadow(0px 0px 10px rgb(181, 255, 230));
+    z-index: 10;
+}
+
+.dark-theme .overflowcontainer_home #zindex0 {
+    content: url("images/indexmap/background copy.png");
+    z-index: 0;
+} 
+
+.dark-theme .overflowcontainer_home_Projects {
+    content: url("images/indexmap/projects copy.png");
+    z-index: 3;
+}
+.dark-theme .overflowcontainer_home_Skills {
+    content: url("images/indexmap/skills copy.png");
+    z-index: 3;
+}
+.dark-theme .overflowcontainer_home_Experience {
+    content: url("images/indexmap/experience copy.png");
+    z-index: 3;
+}
+.dark-theme .overflowcontainer_home_Education {
+    content: url("images/indexmap/education copy.png");
+    z-index: 3;
+}
+.dark-theme .overflowcontainer_home_AboutMe {
+    content: url("images/indexmap/about me copy.png");
+    z-index: 3;
+}
+
+
