--- a/style_main.css
+++ b/style_main.css
@@ -414,6 +414,7 @@ c.active {
     scrollbar-width: thin;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    padding-bottom: 5%;
   }
 
 
