--- a/projects.css
+++ b/projects.css
@@ -1,58 +1,65 @@
-
 /* ============================================================================ */
 
-body{
-	text-align: center;
+body {
+  text-align: center;
 }
-[type="radio"]{
+
+[type="radio"] {
   display: none;
 }
-label{
+
+label {
   padding: 0.25rem 0.75rem;
   border-radius: 0.25rem;
   cursor: pointer;
   transition: 0.25s;
   color: var(--text-color);
 }
-[type="radio"]:checked + label{
-	background: var(--secondary-color);
+
+[type="radio"]:checked+label {
+  background: var(--secondary-color);
 }
-[type="radio"]:nth-of-type(2):checked ~ .gallery .card:not(.Architecture),
-[type="radio"]:nth-of-type(4):checked ~ .gallery .card:not(.Product),
-[type="radio"]:nth-of-type(3):checked ~ .gallery .card:not(.Code),
-[type="radio"]:nth-of-type(5):checked ~ .gallery .card:not(.Etc)
-{
+
+[type="radio"]:nth-of-type(2):checked~.gallery .card:not(.Architecture),
+[type="radio"]:nth-of-type(4):checked~.gallery .card:not(.Product),
+[type="radio"]:nth-of-type(3):checked~.gallery .card:not(.Code),
+[type="radio"]:nth-of-type(5):checked~.gallery .card:not(.Etc) {
   display: none;
 }
-.gallery{
+
+.gallery {
   display: grid;
-	justify-content: center;
+  justify-content: center;
   grid-template-columns: repeat(auto-fit, 400px);
   grid-auto-rows: 1fr;
   grid-gap: 1rem;
   padding: 0.5rem;
   margin-top: 1rem;
-  
+
 }
-.card{
+
+.card {
   margin: 0;
   background: var(--secondary-color);
   border-radius: 0.25rem;
   overflow: hidden;
-  
+
 }
-.card:hover{
+
+.card:hover {
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
   /* cursor: pointer; */
   opacity: 0.5;
-  
+
 }
-.card__image{
+
+.card__image {
   width: 100%;
   object-fit: cover;
 }
-.card__caption{
-	font-weight: bold;
+
+.card__caption {
+  font-weight: bold;
   font-variant: small-caps;
   padding: 0.5rem;
   text-align: center;
@@ -62,4 +69,3 @@ label{
 
 
 /* INDIV PAGES */
-
