--- a/skills.css
+++ b/skills.css
@@ -1,30 +1,33 @@
-
 /* ============================================================================ */
 
-body{
-	text-align: center;
+body {
+  text-align: center;
 }
-[type="radio"]{
+
+[type="radio"] {
   display: none;
 }
-label{
+
+label {
   padding: 0.25rem 0.75rem;
   border-radius: 0.25rem;
   cursor: pointer;
   transition: 0.25s;
   color: var(--text-color);
 }
-[type="radio"]:checked + label{
-	background: var(--secondary-color);
+
+[type="radio"]:checked+label {
+  background: var(--secondary-color);
 }
-[type="radio"]:nth-of-type(2):checked ~ .gallery .card:not(.Software),
-[type="radio"]:nth-of-type(4):checked ~ .gallery .card:not(.Language),
-[type="radio"]:nth-of-type(3):checked ~ .gallery .card:not(.Coding),
-[type="radio"]:nth-of-type(5):checked ~ .gallery .card:not(.Etc)
-{
+
+[type="radio"]:nth-of-type(2):checked~.gallery .card:not(.Software),
+[type="radio"]:nth-of-type(4):checked~.gallery .card:not(.Language),
+[type="radio"]:nth-of-type(3):checked~.gallery .card:not(.Coding),
+[type="radio"]:nth-of-type(5):checked~.gallery .card:not(.Etc) {
   display: none;
 }
-.gallery{
+
+.gallery {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 160px);
@@ -32,30 +35,41 @@ label{
   grid-gap: 1rem;
   padding: 0.5rem;
   margin-top: 1rem;
-  
+
 }
-.card{
+
+.card {
   margin: 0;
   background: var(--secondary-color);
   border-radius: 0.25rem;
   overflow: hidden;
-  
+
 }
-.card:hover{
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
-  /* cursor: pointer; */
-  opacity: 0.5;
-  
+
+.card:hover {
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.041);
+  opacity: 0.7;
 }
-.card__image{
+
+.card__image {
   width: 100%;
   object-fit: cover;
 }
-.card__caption{
-	font-weight: bold;
+
+.card__caption {
+  font-weight: bold;
   font-variant: small-caps;
   padding: 0.5rem;
   padding-bottom: 0px;
   text-align: center;
   color: var(--text-color);
+}
+
+.xx {
+  display: block;
+  color: rgb(150, 50, 50);
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+  padding-left: 10px;
 }
