--- a/style_main.css
+++ b/style_main.css
@@ -22,6 +22,97 @@
 
 }
 
+.scroll_down_arrow {
+    position: fixed;
+    transform: rotate(-90deg);
+    filter: brightness(100);
+    width: 40px;
+    height: auto;
+    left: 50%;
+    bottom: 5%;
+    z-index: 10000;
+    display: none;
+    filter: brightness(00);
+}
+
+#scroll_down_arrow_flip { 
+    transform: rotate(90deg);
+    left: 40%;
+}
+
+.dark-theme .scroll_down_arrow{
+    filter: brightness(100);
+}
+
+
+@media only screen and (max-width: 1000px) {
+    .scroll_down_arrow {
+        display: inline;
+    }
+    
+}
+
+/* === tablets fix==== */
+@media only screen and (max-width: 1200px) {
+    .overflowcontainer_home{
+        transform: translate(0%,0%);
+        position:absolute;
+    bottom:0px;
+    }
+
+    .Modal{
+        filter: opacity(00);
+    }
+
+    .scroll_down_arrow {
+        display: inline;
+        bottom: 5%;
+    } 
+}
+
+
+
+/* === long phones fix==== */
+@media only screen and (max-width: 700px) {
+    .overflowcontainer_home{
+        transform: translate(-8%,-10%);
+        position:absolute;
+    bottom:0px;
+    }
+
+    .Modal{
+        filter: opacity(00);
+    }
+
+    .scroll_down_arrow {
+        display: inline;
+        bottom: 10%;
+    }
+}
+
+
+/* === small phones fix==== */
+@media only screen and (max-height: 740px) {
+    .overflowcontainer_home{
+        transform: translate(-8%,-30%);
+        position:absolute;
+    bottom:0px;
+    }
+
+    .Modal{
+        filter: opacity(00);
+    }
+
+    .scroll_down_arrow {
+        display: inline;
+        bottom: 8%;
+    }
+}
+
+
+
+
+
 .background {
     height: 100vh;
     width: 100%;
@@ -297,8 +388,10 @@
     max-width: 1100px;
     padding: 20px 40px 40px;
     color: var(--text-color);
-    height: 200px;
+    height: auto;
+    min-height: 200px;
     font-size: 12px;
+    margin: 0, 100, 0, 100px;
 }
 
 .textbox img {
@@ -309,20 +402,24 @@
 }
 
 .textbox p {
-    position: absolute;
-    left: 30%;
-    top: 60%;
-    transform: translateY(-50%);
+    margin-left: 25%;
+    /* margin-top: -5%; */
+    /* position: absolute; */
+    /* left: 30%;
+    top: 60%; */
+    /* transform: translateY(-50%); */
     width: 70%;
+    margin-top: 30px;
     padding-right: 30px;
 }
 
 .textbox h2 {
-    position: absolute;
-    left: 30%;
-    top: 20%;
+    margin-left: 25%;
+    /* position: absolute; */
+    /* left: 30%;
+    top: 20%; */
     text-decoration: bold;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
     max-width: 70%;
     padding-right: 20px;
 }
@@ -365,10 +462,10 @@ br {
     color: var(--secondary-color);
 }
 
-.fa-solid {
+/* .fa-solid {
     padding-left: 100px;
     color: var(--text-color);
-}
+} */
 
 /* ================================== LANGUAGE CHANGE ========================================= */
 .langWrap {
@@ -396,7 +493,7 @@ c.active {
 
 .overflowwrapper {
     background: var(primary-color);
-    position:relative;
+    position: relative;
 }
 
 .overflowwrapper::after {
@@ -404,7 +501,7 @@ c.active {
 }
 
 
-.overflowcontainer_nonhome{
+.overflowcontainer_nonhome {
     position: relative;
     overflow-y: auto;
     overflow-x: auto;
@@ -412,11 +509,26 @@ c.active {
     /* height: 65vh; */
     scrollbar-color: var(--text-color) var(--primary-color);
     scrollbar-width: thin;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
     padding-bottom: 5%;
-  }
+    
+}
 
+.overflowcontainer_nonhome_gallery {
+    position: relative;
+    overflow-y: visible;
+    overflow-x: hidden;
+    height: 85vh;
+    /* height: 65vh; */
+    scrollbar-color: var(--text-color) var(--primary-color);
+    scrollbar-width: thin;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    padding-bottom: 0%;
+}
 
 .overflowcontainer {
     position: relative;
@@ -447,10 +559,10 @@ c.active {
     position: relative;
     overflow-y: hidden;
     overflow-x: auto;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     /*height: 90vh;*/
     /* width: 100vw; */
     /* height: 65vh; */
@@ -465,9 +577,9 @@ c.active {
     left: 50%;
     transform: translatex(-50%);
     width: 95vh; */
-   /*width: 100%;*/
+    /*width: 100%;*/
     margin: auto;
-    
+
 }
 
 .overflowcontainer_home_AboutMe {
@@ -523,6 +635,7 @@ c.active {
     filter: drop-shadow(0px 0px 10px rgb(161, 255, 55));
     z-index: 4;
 }
+
 /*
 @media screen and (max-width:1680px) {
     .overflowcentered {
@@ -538,7 +651,7 @@ c.active {
     }
 }
 */
-.dark-theme .shadowfilter:hover{
+.dark-theme .shadowfilter:hover {
     filter: drop-shadow(0px 0px 10px rgb(181, 255, 230));
     filter: drop-shadow(0px 0px 10px rgb(181, 255, 230));
     z-index: 4;
@@ -547,27 +660,79 @@ c.active {
 .dark-theme .overflowcontainer_home #zindex0 {
     content: url("images/indexmap/background copy.png");
     z-index: 0;
-} 
+}
 
 .dark-theme .overflowcontainer_home_Projects {
     content: url("images/indexmap/projects copy.png");
     z-index: 3;
 }
+
 .dark-theme .overflowcontainer_home_Skills {
     content: url("images/indexmap/skills copy.png");
     z-index: 3;
 }
+
 .dark-theme .overflowcontainer_home_Experience {
     content: url("images/indexmap/experience copy.png");
     z-index: 3;
 }
+
 .dark-theme .overflowcontainer_home_Education {
     content: url("images/indexmap/education copy.png");
     z-index: 3;
 }
+
 .dark-theme .overflowcontainer_home_AboutMe {
     content: url("images/indexmap/about me copy.png");
     z-index: 3;
 }
 
 
+/* ================================== POPUP MAIN ========================================= */
+.Modal {
+    position: absolute;
+    bottom: 420px;
+    right: 900px;
+    height: 80px;
+    width: 180px;
+    border-radius: 20px;
+    background: #ffffffe1;
+    z-index: 5;
+    display: inline;
+}
+
+.Modal-InText {
+    text-align: center;
+    transform: translateY(-15px);
+    text-transform: uppercase;
+}
+
+.triangle {
+    position: relative;
+    bottom: -80px;
+    right: -50px;
+    z-index: 5;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 20px 10px 0 10px;
+    border-color: #ffffffe1 transparent transparent transparent;
+}
+
+.cross {
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.267);
+    transform: scale(1.2);
+    position: relative;
+    top: -15px;
+    right: -173px;
+    z-index: 10;
+}
+
+.cross:hover {
+    cursor: pointer;
+}
+
+.br{
+    height: 3px;
+}
