--- a/skills.css
+++ b/skills.css
@@ -48,7 +48,7 @@ label {
 
 .card:hover {
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.041);
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 
 .card__image {
