--- a/projects.css
+++ b/projects.css
@@ -21,9 +21,10 @@ label {
 }
 
 [type="radio"]:nth-of-type(2):checked~.gallery .card:not(.Architecture),
-[type="radio"]:nth-of-type(4):checked~.gallery .card:not(.Product),
-[type="radio"]:nth-of-type(3):checked~.gallery .card:not(.Code),
-[type="radio"]:nth-of-type(5):checked~.gallery .card:not(.Etc) {
+[type="radio"]:nth-of-type(3):checked~.gallery .card:not(.Sustainability),
+[type="radio"]:nth-of-type(5):checked~.gallery .card:not(.Product),
+[type="radio"]:nth-of-type(4):checked~.gallery .card:not(.Code),
+[type="radio"]:nth-of-type(6):checked~.gallery .card:not(.Etc) {
   display: none;
 }
 
