--- a/style_main.css
+++ b/style_main.css
@@ -44,6 +44,13 @@
     filter: brightness(100);
 }
 
+.navbar_logo{
+    width: auto;
+    height: 100%;
+    justify-content: left;
+    margin-left: 50px;
+    cursor: pointer;
+}
 
 @media only screen and (max-width: 1000px) {
     .scroll_down_arrow {
@@ -149,17 +156,6 @@
     font-size: 14px;
 }
 
-#navbar-logo {
-    /* justify-self: start; */
-    justify-content: left;
-    margin-left: 40px;
-    width: 50px;
-    box-shadow: inset 0 0 100px rgb(228, 228, 228)
-}
-
-#navbar-logo {
-    cursor: pointer;
-}
 
 .nav-menu {
     display: flex;
@@ -688,6 +684,10 @@ c.active {
     z-index: 3;
 }
 
+.dark-theme .navbar_logo{
+    content: url("images/logolight.png");
+    z-index: 0;
+}
 
 /* ================================== POPUP MAIN ========================================= */
 .Modal {
